[package]
name = "bonsai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.22", features = ["derive"]}
crossterm = "0.25.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
simple-simplex = "1.0.3"
